# mavftp-cli

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: controller.rs  main.rs  mavftp.rs
